* input
  - curl: support "charset" parameter in URI fragment
  - ffmpeg: allow partial reads
  - io_uring: new plugin for local files on Linux (using liburing)
  - smbclient: close unused SMB/CIFS connections
* database
  - upnp: drop support for libupnp versions older than 1.8
* playlist
  - cue: integrate contents in database
* decoder
  - mad: remove option "gapless", always do gapless
  - sidplay: add option "default_genre"
  - sidplay: map SID name field to "Album" tag
  - sidplay: add support for new song length format with libsidplayfp 2.0
  - vorbis, opus: improve seeking accuracy
* playlist
  - flac: support reading CUE sheets from remote FLAC files
* filter
  - ffmpeg: new plugin based on FFmpeg's libavfilter library
  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
  - volume: convert S16 to S24 to preserve quality and reduce dithering noise
  - dsd: add integer-only DSD to PCM converter
* output
  - jack: add option "auto_destination_ports"
  - jack: report error details
  - pulse: add option "media_role"
  - solaris: support S8 and S32
* lower the real-time priority from 50 to 40
* switch to C++17
  - GCC 7 or clang 4 (or newer) recommended

ver 0.21.26 (not yet released)
* database
  - inotify: obey ".mpdignore" files
* output
  - osx: fix crash bug
  - sles: support floating point samples
* archive
  - bzip2: fix crash on corrupt bzip2 file
  - bzip2: flush output at end of input file
  - iso9660: fix unaligned reads
  - iso9660: support seeking
  - zzip: fix crash on corrupt ZIP file
* decoder
  - ffmpeg: remove "rtsp://" from the list of supported protocols
  - ffmpeg: add "hls+http://" to the list of supported protocols
  - opus: support the gain value from the Opus header
  - sndfile: fix lost samples at end of file
* fix "single" mode bug after resuming playback
* the default log_level is "default", not "info"

ver 0.21.25 (2020/07/06)
* protocol:
  - fix crash when using "rangeid" while playing
* database