@@ -18,6 +18,7 @@ ver 0.22 (not yet released)
 * playlist
   - cue: integrate contents in database
 * decoder
+  - ffmpeg: support RTSP
   - mad: remove option "gapless", always do gapless
   - sidplay: add option "default_genre"
   - sidplay: map SID name field to "Album" tag
